--- a/index.html
+++ b/index.html
@@ -1,84 +1,15 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Comic Book Style Site</title>
-    <!-- Bulma CSS Library -->
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.9.4/css/bulma.min.css"
-    />
-    <!-- Custom CSS -->
-    <link rel="stylesheet" href="style.css" />
-    <!-- Comic Book Font -->
-    <link
-      href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap"
-      rel="stylesheet"
-    />
-    <!-- Font Awesome for Social Media Icons -->
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
-    />
+    <link href="https://fonts.googleapis.com/css2?family=Bangers&family=Comic+Neue:wght@400;700&family=Permanent+Marker&display=swap" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    <title>Antonio Archer | Web Developer</title>
   </head>
   <body>
-    <section class="hero is-primary is-bold">
-      <div class="hero-body">
-        <div class="container">
-          <h1 class="title comic-title">Welcome to My Site</h1>
-          <h2 class="subtitle comic-subtitle">- Antonio Archer</h2>
-        </div>
-      </div>
-    </section>
-
-    <section class="section">
-      <div class="container">
-        <div class="columns is-vcentered">
-          <div class="column is-one-third">
-            <figure class="image is-square">
-              <img
-                src="images/Antonio Archer LinkedIn.jpeg"
-                alt="Antonio Archer"
-                class="profile-pic"
-              />
-            </figure>
-          </div>
-          <div class="column">
-            <div class="box comic-panel">
-              <p class="content speech-bubble">
-                Hey there! I'm Antonio Archer, an aspiring software engineer
-                based in Philadelphia, PA. I love coding, especially in Python.
-                In my free time, I enjoy gaming, sports, and diving into anime.
-                I'm also passionate about community work and volunteer as a
-                youth representative to help improve local services. This site
-                is my personal corner where I share my projects, thoughts, and
-                journey into the world of tech. Stay tuned for more!
-              </p>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <section class="section">
-      <div class="container has-text-centered">
-        <h3 class="title is-4 comic-title">Connect with Me</h3>
-        <div class="social-icons">
-          <a href="https://x.com/ad_archer_" target="_blank" class="icon is-large">
-            <i class="fab fa-twitter"></i>
-          </a>
-          <a href="https://www.instagram.com/antonio_darcher/" target="_blank" class="icon is-large">
-            <i class="fab fa-instagram"></i>
-          </a>
-          <a href="https://github.com/AD-Archer" target="_blank" class="icon is-large">
-            <i class="fab fa-github"></i>
-          </a>
-          <a href="https://www.linkedin.com/in/antonio-archer/" target="_blank" class="icon is-large">
-            <i class="fab fa-linkedin"></i>
-          </a>
-        </div>
-      </div>
-    </section>
+    <div id="root"></div>
+    <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
