add logo to site

--- a/index.html
+++ b/index.html
@@ -7,6 +7,18 @@
     <link href="https://fonts.googleapis.com/css2?family=Bangers&family=Comic+Neue:wght@400;700&family=Permanent+Marker&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <title>Antonio Archer | Web Developer</title>
+    <meta name="description" content="Antonio Archer - Full Stack Software Engineer crafting innovative web solutions with React.js, JavaScript, and Python.">
+    <meta name="keywords" content="Full Stack Developer, React.js, JavaScript, Python, Web Development, Software Engineer">
+    <meta name="author" content="Antonio Archer">
+    <meta name="robots" content="index, follow">
+    <meta property="og:title" content="Antonio Archer - Full Stack Developer">
+    <meta property="og:description" content="Crafting innovative web solutions with React.js, JavaScript, and Python.">
+    <meta property="og:image" content="/logo.svg">
+    <meta property="og:url" content="https://antonioarcher.com">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Antonio Archer - Full Stack Developer">
+    <meta name="twitter:description" content="Crafting innovative web solutions with React.js, JavaScript, and Python.">
+    <meta name="twitter:image" content="/logo.svg">
   </head>
   <body>
     <div id="root"></div>
